name:                breeze-login
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/breeze-login#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable breeze-login
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Data.Breeze
                     , FastLogger
                     , Snap.Snaplet.Breeze
                     , Version
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-lens
                     , bytestring
                     , data-default
                     , elm-export
                     , exceptions
                     , fast-logger
                     , http-conduit
                     , ixset
                     , lens
                     , mtl
                     , stm
                     , simple-core
                     , simple-aeson
                     , simple-snap
                     , simple-string
                     , snap
                     , snap-core
                     , text
                     , time
                     , transformers
