name:                breeze-login
version:             1.2.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/breeze-login#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable breeze-login
  hs-source-dirs:      src
  ghc-options: -O2 -threaded -Wall -fwarn-tabs -funbox-strict-fields
  main-is:             Main.hs
  other-modules:       Data.Breeze
                     , FastLogger
                     , Snap.Snaplet.Breeze
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-lens
                     , bytestring
                     , data-default
                     , exceptions
                     , fast-logger
                     , elm-export
                     , http-conduit
                     , ixset
                     , lens
                     , mtl
                     , simple-aeson
                     , simple-core
                     , simple-snap
                     , simple-string
                     , snap
                     , snap-core
                     , stm
                     , text
                     , time
                     , transformers

executable makeelm
  hs-source-dirs:      src
  main-is:             MakeElmTypes.hs
  other-modules:       Data.Breeze
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-lens
                     , bytestring
                     , data-default
                     , elm-export
                     , exceptions
                     , fast-logger
                     , http-conduit
                     , ixset
                     , lens
                     , mtl
                     , simple-aeson
                     , simple-core
                     , simple-snap
                     , simple-string
                     , snap
                     , snap-core
                     , stm
                     , text
                     , time
                     , transformers
